Loading Correccion inconsistencia datos

--- a/src/app/Paginas/Body/backup/automatics/automatics.component.html
+++ b/src/app/Paginas/Body/backup/automatics/automatics.component.html
@@ -17,7 +17,7 @@
       <th scope="col" class="Encabezado-Tabla">#</th>
       <th scope="col" class="Encabezado-Tabla">Id operacion</th>
       <th scope="col" class="Encabezado-Tabla">Id cuenta</th>
-      <th scope="col" class="Encabezado-Tabla">Id categoria</th>
+      <th scope="col" class="Encabezado-Tabla">Categoria</th>
       <th scope="col" class="Encabezado-Tabla">Periodo</th>
       <th scope="col" class="Encabezado-Tabla">repeat_number</th>
       <th scope="col" class="Encabezado-Tabla">each_number</th>
@@ -37,7 +37,7 @@
 
       <th scope="row" class="Celdas-Tabla">{{(i+1)}}</th>
       <td class="Celdas-Tabla">{{automatic.id_operation}}</td>
-      <td class="Celdas-Tabla">{{automatic.account}}</td>
+      <td class="Celdas-Tabla">{{automatic.id_account}}</td>
       <td class="Celdas-Tabla">{{util.asignarNombre(automatic.id_category, automatic.category)}}</td>
       <td class="Celdas-Tabla">{{automatic.period}}</td>
       <td class="Celdas-Tabla">{{automatic.repeat_number}}</td>
