--- a/src/app/Paginas/Body/backups/backups.component.html
+++ b/src/app/Paginas/Body/backups/backups.component.html
@@ -37,7 +37,7 @@
     <tbody>
     <tr *ngFor="let back of backService.backups; let i = index" >
       <th scope="row" class="Celdas-Tabla">{{(i+1)}}</th>
-      <td class="Celdas-Tabla" [routerLink]="['/backup', (i+1), back.id_backup]">{{back.id_backup}}</td>
+      <td class="Celdas-Tabla" [routerLink]="['/id_backup', (i+1), back.id_backup]">{{back.id_backup}}</td>
       <!--td class="text-center">{{back.id_user}}</td-->
       <td class="Celdas-Tabla">{{(back.automatic == 1) ? 'Si': 'No'}}</td>
       <td class="Celdas-Tabla">{{back.date_creation | date:'dd MMMM yyyy'}}</td>
